{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 0,
  "lineage": "c76bad82-b890-bb2f-82b4-6e0e5a1e4df2",
  "resources": [
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c6d983468c79a037",
            "owner_id": "264594923212",
            "tags": {
              "Configuration": "Internet Gateway",
              "Name": "prod-external-IGW",
              "Project": "msp-2",
              "Stage": "prod"
            },
            "vpc_id": "vpc-03b5eac4f00e854fc"
          },
          "depends_on": [
            "aws_vpc.main_vpc",
            "module.global_var"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f4c23e32afeeb1a1",
            "owner_id": "264594923212",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Configuration": "Private Route Table",
              "Name": "prod-external-Private-RT",
              "Project": "msp-2-Private-RT}",
              "Stage": "prod"
            },
            "vpc_id": "vpc-03b5eac4f00e854fc"
          },
          "depends_on": [
            "aws_vpc.main_vpc",
            "module.global_var"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c6f6d8366ceec389",
            "owner_id": "264594923212",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6d983468c79a037",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Configuration": "Public Route Table",
              "Name": "prod-external-Public-RT",
              "Project": "msp-2-Public-RT}",
              "Stage": "prod"
            },
            "vpc_id": "vpc-03b5eac4f00e854fc"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc",
            "module.global_var"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099aeead804b10d0d",
            "route_table_id": "rtb-0f4c23e32afeeb1a1",
            "subnet_id": "subnet-03db6faa5b795fa20"
          },
          "depends_on": [
            "aws_route_table.privateRT",
            "aws_subnet.privateA"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab6a34bed529da77",
            "route_table_id": "rtb-0f4c23e32afeeb1a1",
            "subnet_id": "subnet-0fd3eb253a0757b99"
          },
          "depends_on": [
            "aws_route_table.privateRT",
            "aws_subnet.privateC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06235926ccd1230c8",
            "route_table_id": "rtb-0c6f6d8366ceec389",
            "subnet_id": "subnet-00506a40d10aefa10"
          },
          "depends_on": [
            "aws_route_table.publicRT",
            "aws_subnet.publicA"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbab0c9b40ad30a6",
            "route_table_id": "rtb-0c6f6d8366ceec389",
            "subnet_id": "subnet-0c0f2e23414f5401d"
          },
          "depends_on": [
            "aws_route_table.publicRT",
            "aws_subnet.publicC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:264594923212:subnet/subnet-03db6faa5b795fa20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03db6faa5b795fa20",
            "map_public_ip_on_launch": false,
            "owner_id": "264594923212",
            "tags": {
              "Configuration": "Private A",
              "Name": "prod-external-Private-A",
              "Project": "msp-2",
              "Stage": "prod"
            },
            "vpc_id": "vpc-03b5eac4f00e854fc"
          },
          "depends_on": [
            "aws_vpc.main_vpc",
            "module.global_var"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:264594923212:subnet/subnet-0fd3eb253a0757b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0fd3eb253a0757b99",
            "map_public_ip_on_launch": false,
            "owner_id": "264594923212",
            "tags": {
              "Configuration": "Private C",
              "Name": "prod-external-Private-C",
              "Project": "msp-2",
              "Stage": "prod"
            },
            "vpc_id": "vpc-03b5eac4f00e854fc"
          },
          "depends_on": [
            "aws_vpc.main_vpc",
            "module.global_var"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:264594923212:subnet/subnet-00506a40d10aefa10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00506a40d10aefa10",
            "map_public_ip_on_launch": false,
            "owner_id": "264594923212",
            "tags": {
              "Configuration": "Public A",
              "Name": "prod-external-Public-A",
              "Project": "msp-2",
              "Stage": "prod"
            },
            "vpc_id": "vpc-03b5eac4f00e854fc"
          },
          "depends_on": [
            "aws_vpc.main_vpc",
            "module.global_var"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:264594923212:subnet/subnet-0c0f2e23414f5401d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c0f2e23414f5401d",
            "map_public_ip_on_launch": false,
            "owner_id": "264594923212",
            "tags": {
              "Configuration": "Public C",
              "Name": "prod-external-Public-C",
              "Project": "msp-2",
              "Stage": "prod"
            },
            "vpc_id": "vpc-03b5eac4f00e854fc"
          },
          "depends_on": [
            "aws_vpc.main_vpc",
            "module.global_var"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_info",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:264594923212:vpc/vpc-03b5eac4f00e854fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098b4b8295c3000bc",
            "default_route_table_id": "rtb-0f591e7605a997df6",
            "default_security_group_id": "sg-0c9bc1be147640e83",
            "dhcp_options_id": "dopt-0cdbca64",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03b5eac4f00e854fc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f591e7605a997df6",
            "owner_id": "264594923212",
            "tags": {
              "Configuration": "VPC",
              "Location": "external",
              "Name": "prod-external-VPC",
              "Project": "msp-2",
              "Stage": "prod"
            }
          },
          "depends_on": [
            "module.global_var"
          ]
        }
      ]
    }
  ]
}